// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event add entity 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "locations": Array [],
  },
}
`;

exports[`Event post to entity 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "concepts": Array [
      Object {
        "__typename": "Concept",
        "events": Array [
          Object {
            "__typename": "Event",
            "title": "Test",
          },
        ],
        "title": "test",
      },
    ],
  },
}
`;

exports[`Event post to space 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "events": Array [
      Object {
        "__typename": "Event",
        "spaces": Array [
          Object {
            "__typename": "Space",
            "title": "post to space",
          },
        ],
        "title": "Test",
      },
    ],
  },
}
`;

exports[`Event remove entity 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "locations": Array [],
  },
}
`;
